--- a/index.html
+++ b/index.html
@@ -45,17 +45,13 @@ These days you can choose a Porsche 911 to fit a wide range of lifestyles, like 
     </span>
   </p>
 </br>    
-   <p class="text-lg">🔗
-      <a href="https://www.porsche.com/stories/innovation/a-brief-history-of-the-porsche-911" class="underline-link">more information</a>
-    </p>
+  
 
  <p class="text-lg">
-      <a href="https://www.porsche.com/stories/innovation/a-brief-history-of-the-porsche-911" class="underline-link">more information 🔗</a>
+      <a href="https://www.porsche.com/stories/innovation/a-brief-history-of-the-porsche-911" class="underline-link">more information</a> 🔗
     </p>
 
-<p class="text-lg">
-      <a href="https://www.porsche.com/stories/innovation/a-brief-history-of-the-porsche-911" class="underline-link">+ information 🔗</a>
-    </p>
+
 
 </div>
     
