--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@ These days you can choose a Porsche 911 to fit a wide range of lifestyles, like 
       <a href="https://www.porsche.com/stories/innovation/a-brief-history-of-the-porsche-911" class="underline-link">more information</a> 🔗
     </p>
 
-
+ <p class="text-lg">
+      <a href="wallpapers.html" class="underline-link">wallpapers</a> ✨
+    </p>
 
 </div>
     
