--- a/wallpapers.html
+++ b/wallpapers.html
@@ -18,9 +18,49 @@
   
   
 <figure class="max-w-lg mx-auto">
-  <img class="h-auto max-w-full rounded-lg" src="/img/1.jpg" alt="Porsche Wallpaper">
+  <img class="h-auto max-w-full rounded-lg" src="/img/1.jpg" alt="Porsche Wallpaper 1">
+  <img class="h-auto max-w-full rounded-lg" src="/img/2.jpg" alt="Porsche Wallpaper 2">
+  <img class="h-auto max-w-full rounded-lg" src="/img/3.jpg" alt="Porsche Wallpaper 3">
+  <img class="h-auto max-w-full rounded-lg" src="/img/4.jpg" alt="Porsche Wallpaper 4">
+  <img class="h-auto max-w-full rounded-lg" src="/img/5.jpg" alt="Porsche Wallpaper 5">
+  <img class="h-auto max-w-full rounded-lg" src="/img/6.jpg" alt="Porsche Wallpaper 6">
+  <img class="h-auto max-w-full rounded-lg" src="/img/7.jpg" alt="Porsche Wallpaper 7">
+  <img class="h-auto max-w-full rounded-lg" src="/img/8.jpg" alt="Porsche Wallpaper 8">
+  <img class="h-auto max-w-full rounded-lg" src="/img/9.jpg" alt="Porsche Wallpaper 9">
+  <img class="h-auto max-w-full rounded-lg" src="/img/10.jpg" alt="Porsche Wallpaper 10">
+  <img class="h-auto max-w-full rounded-lg" src="/img/11.jpg" alt="Porsche Wallpaper 11">
+  <img class="h-auto max-w-full rounded-lg" src="/img/12.jpg" alt="Porsche Wallpaper 12">
+  <img class="h-auto max-w-full rounded-lg" src="/img/13.jpg" alt="Porsche Wallpaper 13">
+  <img class="h-auto max-w-full rounded-lg" src="/img/14.jpg" alt="Porsche Wallpaper 14">
+  <img class="h-auto max-w-full rounded-lg" src="/img/15.jpg" alt="Porsche Wallpaper 15">
+  <img class="h-auto max-w-full rounded-lg" src="/img/16.jpg" alt="Porsche Wallpaper 16">
+  <img class="h-auto max-w-full rounded-lg" src="/img/17.jpg" alt="Porsche Wallpaper 17">
+  <img class="h-auto max-w-full rounded-lg" src="/img/18.jpg" alt="Porsche Wallpaper 18">
+  <img class="h-auto max-w-full rounded-lg" src="/img/19.jpg" alt="Porsche Wallpaper 19">
+  <img class="h-auto max-w-full rounded-lg" src="/img/20.jpg" alt="Porsche Wallpaper 20">
+  <img class="h-auto max-w-full rounded-lg" src="/img/21.jpg" alt="Porsche Wallpaper 21">
+  <img class="h-auto max-w-full rounded-lg" src="/img/22.jpg" alt="Porsche Wallpaper 22">
+  <img class="h-auto max-w-full rounded-lg" src="/img/23.jpg" alt="Porsche Wallpaper 23">
+  <img class="h-auto max-w-full rounded-lg" src="/img/24.jpg" alt="Porsche Wallpaper 24">
+  <img class="h-auto max-w-full rounded-lg" src="/img/25.jpg" alt="Porsche Wallpaper 25">
+  <img class="h-auto max-w-full rounded-lg" src="/img/26.jpg" alt="Porsche Wallpaper 26">
+  <img class="h-auto max-w-full rounded-lg" src="/img/27.jpg" alt="Porsche Wallpaper 27">
+  <img class="h-auto max-w-full rounded-lg" src="/img/28.jpg" alt="Porsche Wallpaper 28">
+  <img class="h-auto max-w-full rounded-lg" src="/img/29.jpg" alt="Porsche Wallpaper 29">
+  <img class="h-auto max-w-full rounded-lg" src="/img/30.jpg" alt="Porsche Wallpaper 30">
+  <img class="h-auto max-w-full rounded-lg" src="/img/31.jpg" alt="Porsche Wallpaper 31">
+  <img class="h-auto max-w-full rounded-lg" src="/img/32.jpg" alt="Porsche Wallpaper 32">
+  <img class="h-auto max-w-full rounded-lg" src="/img/33.jpg" alt="Porsche Wallpaper 33">
+  <img class="h-auto max-w-full rounded-lg" src="/img/34.jpg" alt="Porsche Wallpaper 34">
+  <img class="h-auto max-w-full rounded-lg" src="/img/35.jpg" alt="Porsche Wallpaper 35">
+  <img class="h-auto max-w-full rounded-lg" src="/img/36.jpg" alt="Porsche Wallpaper 36">
+  <img class="h-auto max-w-full rounded-lg" src="/img/37.jpg" alt="Porsche Wallpaper 37">
+  <img class="h-auto max-w-full rounded-lg" src="/img/38.jpg" alt="Porsche Wallpaper 38">
+  <img class="h-auto max-w-full rounded-lg" src="/img/39.jpg" alt="Porsche Wallpaper 39">
+  <img class="h-auto max-w-full rounded-lg" src="/img/40.jpg" alt="Porsche Wallpaper 40">
+  <img class="h-auto max-w-full rounded-lg" src="/img/41.jpg" alt="Porsche Wallpaper 41">
+  <img class="h-auto max-w-full rounded-lg" src="/img/42.jpg" alt="Porsche Wallpaper 42">
 </figure>
-
 
     
 
