--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ These days you can choose a Porsche 911 to fit a wide range of lifestyles, like 
   
 
  <p class="text-lg">
-      <a href="https://www.porsche.com/stories/innovation/a-brief-history-of-the-porsche-911" class="underline-link">more information</a> 🔗
-    </p>
+      <a href="historia.html" class="underline-link">info 911</a> ℹ️    
+ </p>
 
  <p class="text-lg">
       <a href="wallpapers.html" class="underline-link">wallpapers</a> ✨
