--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 </br> </br> 
 
  <p class="text-lg">
-      <a href="historia.html" class="underline-link">info 911</a> ℹ️    
+      <a href="historia.html" class="underline-link">911</a> ℹ️    
  </p>
 
  <p class="text-lg">
