--- a/index.html
+++ b/index.html
@@ -180,12 +180,17 @@
 <hr class="dashed">
 </br> </br> 
 
+
+      <p class="text-lg">
+      <a href="models.html" class="underline-link">Models</a> 🚗
+ </p>
+      
  <p class="text-lg">
       <a href="historia.html" class="underline-link">911</a> ℹ️    
  </p>
 
  <p class="text-lg">
-      <a href="wallpapers.html" class="underline-link">wallpapers</a> ✨
+      <a href="wallpapers.html" class="underline-link">Wallpapers</a> ✨
     </p>
 
 </div>
