--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       </br> </br>
   
       <p class="text-lg mb-4">
-      Porsche AG is a German luxury and high-performance automobile manufacturer, headquartered in Stuttgart. The company, founded by Ferdinand Porsche in the 1930s, initially worked on creating the Volkswagen Beetle. Post-World War II, Ferdinand's son, Ferry Porsche, developed the first Porsche car, the 356. Today, Porsche is owned by Volkswagen AG, in which Porsche Automobil Holding SE has a controlling stake. Porsche's lineup includes the 718, 911, Panamera, Macan, Cayenne, and Taycan. 
-        </p>
+Porsche AG is a German luxury carmaker, founded in the 1930s by Ferdinand Porsche, originally known for developing the Volkswagen Beetle. After World War II, Ferdinand's son, Ferry Porsche, introduced the company's first car, the Porsche 356. Today, Porsche, owned by Volkswagen AG, offers models like the 718, 911, Panamera, Macan, Cayenne, and Taycan.        </p>
 
   
  
