--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
       <p class="text-lg mb-4">
 Porsche AG is a German luxury carmaker, founded in the 1930s by Ferdinand Porsche, originally known for developing the Volkswagen Beetle. After World War II, Ferdinand's son, Ferry Porsche, introduced the company's first car, the Porsche 356. Today, Porsche, owned by Volkswagen AG, offers models like the 718, 911, Panamera, Macan, Cayenne, and Taycan.        </p>
 
+      </br> 
   
- 
+ <figure class="max-w-lg mx-auto">
+  <img class="h-auto max-w-full rounded-lg" src="img/porsche.jpg" alt="Porsche">
+</figure>
       
       </br> </br> </br> </br> 
   
