--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
     <body class="dark-mode">
 
     
-    <div class="max-w-3xl mx-auto py-12 px-6">
-  <h1 class="text-4xl font-bold leading-tight mb-4">
-    Porsche</span>.
-  </h1>
+   <div class="max-w-3xl mx-auto py-12 px-6">
+      <div class="flex items-center">
+    <h1 class="text-4xl font-bold leading-none mb-0">
+        Porsche.
+    </h1>
+    <img src="img/porschelogo.png" alt="Porsche Logo" class="ml-2 w-8 h-8 object-contain">
+</div>
       
         <label class="switch">
     <input type="checkbox" onclick="toggleMode()">
