--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@ Porsche AG is a German luxury carmaker, founded in the 1930s by Ferdinand Porsch
   </h1>
 
   <p class="text-lg mb-4">
-   As business boomed at Porsche, the numbers rose until the successor to the 356 led Porsche to end its use of this custom typology. 1964 saw the ‘Type 901’ launch, making its debut at the Paris Motor Show. After the show, however, an unforeseen issue came to light as Peugeot laid claim to the legal rights of using three-digit numbers containing a zero in the middle. Already mid-launch, the opportunity to create a new number had passed. With a typical display of Porsche ingenuity – and the ‘1’ typeface had already been designed for the new model – a decision was made to rename the vehicle ‘911’, and a legend was born. With models such as the 924, 928 and 944 joining the 911 over the ensuing years, the three-digit figure starting with a ‘9’ has become synonymous with the sporting character of the Porsche brand.
-  </p>
+As Porsche's business grew, the launch of the 1964 "Type 901" at the Paris Motor Show marked the end of the company's earlier numbering system. However, Peugeot held the legal rights to three-digit numbers with a zero in the middle, prompting Porsche to quickly rename the car to "911," thus creating an iconic model. Over the years, other models like the 924, 928, and 944 followed, establishing the "9" as a hallmark of Porsche's sporting character.  </p>
   
   
 </br>    
@@ -146,7 +145,7 @@ Porsche AG is a German luxury carmaker, founded in the 1930s by Ferdinand Porsch
   </h1>
 
   <p class="text-lg mb-4">
-  When it was launched in 2019, the first all-electric Porsche warranted a name worthy of its electrifying qualities. The word Taycan derives from two terms of Turkic origin, translating approximately to “soul of a spirited young horse”. It’s a phrase that epitomises the personality of the electric Porsche – lively, vigorous, agile, free-spirited and tireless. The name also reflects both the brand’s roots and its future simultaneously, with the ‘horse’ reference reminiscent of the iconic silhouette on the Porsche crest itself. Even since its launch, the word has taken on further positive associations across other languages. In Japanese, for instance, ‘taikan’ roughly means ‘physical experience’ – something you won’t fail to agree with once sat behind the wheel of the Taycan.
+Launched in 2019, Porsche's first all-electric vehicle was named "Taycan," a word of Turkic origin meaning "soul of a spirited young horse." The name embodies the car’s lively, agile, and tireless character, while also connecting to Porsche’s heritage through the reference to the horse in the brand's crest. Over time, the name has gained positive meanings in other languages, such as in Japanese, where "taikan" translates to "physical experience," reflecting the dynamic feeling of driving the Taycan.
   </p>
   
   
