Update and rename historia.html to 911.html

--- a/911.html
+++ b/911.html
@@ -48,13 +48,7 @@ These days you can choose a Porsche 911 to fit a wide range of lifestyles, like 
 </br>    
   
 
- <p class="text-lg">
-      <a href="https://www.porsche.com/stories/innovation/a-brief-history-of-the-porsche-911" class="underline-link">more information</a> 🔗
-    </p>
-
- <p class="text-lg">
-      <a href="wallpapers.html" class="underline-link">wallpapers</a> ✨
-    </p>
+<a href="https://www.911.cat" class="text-base">← Go back</a>
 
 </div>
     
